# rag-llmops

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
config/: config.yaml
core/: config.py  exceptions.py  logging_config.py
src/conversation/: chat_manager.py  prompt_builder.py
src/conversational_service/: chat_manager.py
src/document_ingestion/: data_ingestion.py  faiss_manager.py  ingest_data.py  load_data.py  retriever.py
tests/: test_chat_manager.py  test_config.py  test_data_ingestion.py  test_exceptions.py  test_load_data.py  test_logging_config copy.py  test_logging_config.py  test_model_loader.py  test_retriever.py
utils/: file_handling.py  model_loader.py
